Added pages for Forgot Password and Create An Account
Abheek and Arnav

--- a/Frontend/Login/login.html
+++ b/Frontend/Login/login.html
@@ -18,13 +18,13 @@
                 <input type="password" placeholder="Password" required>
             </div>
             <div class="forgot-password">
-                <a href="#">Forgot Password?</a>
+                <a href="pwd_help.html">Forgot Password?</a>
             </div>
             <button type = "Submit" class = "btn">
                 Login
             </button>
             <div class = "register">
-                <a href="#">Register for an Account</a>
+                <a href="register.html">Register for an Account</a>
             </div>
         </form>
     </div>
