Fixed Login Page Design
- Added better margins
- Proper Spacing

Still Requires:
- Better Design For All Device Fit

--- a/Frontend/Login/login.html
+++ b/Frontend/Login/login.html
@@ -10,21 +10,28 @@
 <body>
     <div class="wrapper">
         <form action="">
+
             <h1>Sign In</h1>
             <div class="input">
-                <input type="text" placeholder="Username" required>
+                <input type="text" placeholder="Email" required>
             </div>
             <div class="input">
                 <input type="password" placeholder="Password" required>
             </div>
-            <div class="forgot-password">
-                <a href="pwd_help.html">Forgot Password?</a>
-            </div>
-            <button type = "Submit" class = "btn">
-                Login
-            </button>
-            <div class = "register">
-                <a href="register.html">Register for an Account</a>
+
+            <!-- This is acting as a spacer -->
+            <div class="spacer"></div>
+
+            <div class="footer">
+                <button type = "Submit" class = "btn">
+                    Login
+                </button>
+                <div class = "register">
+                    <a href="register.html" style="color:blue">Register for an Account</a>
+                </div>
+                <div class="forgot-password">
+                    <a href="pwd_help.html" style="color:blue">Forgot Password?</a>
+                </div>
             </div>
         </form>
     </div>
