--- a/Frontend/Login/pwd_help.html
+++ b/Frontend/Login/pwd_help.html
@@ -12,15 +12,21 @@
         <form action="">
             <h1>Forgot Password?</h1>
             <p>Please enter the email address associated with your account.</p>
+
+            <div class="spacer-small"></div>
+
             <div class="full-length-input">
                 <input type="text" placeholder="Email Address" required>
             </div>
             <button type = "Submit" class = "btn">
-                Send Verification Email
+                Send Email
             </button>
+
+            <div class="spacer-small"></div>
+
             <p>You will receive an email with instructions to resetting your password shortly.</p>
             <div class="register">
-                <a href="login.html">Back to login page</a>
+                <a href="login.html" style="color:blue">Back to login page</a>
             </div>
         </form>
     </div>
