--- a/Frontend/Login/register.html
+++ b/Frontend/Login/register.html
@@ -10,6 +10,7 @@
 <body>
     <div class="wrapper">
         <form action="">
+
             <h1>Create an Account</h1>
             <div class="full-length-input">
                 <input type="text" placeholder="Enter your email" required>
@@ -20,11 +21,17 @@
             <div class="full-length-input">
                 <input type="password" placeholder="Confirm your password" required>
             </div>
-            <button type = "Submit" class = "btn">
-                Register
-            </button>
-            <div class = "register">
-                <a href="login.html">Already have a CourseEater account?</a>
+
+            <!-- Treating this as a spacer -->
+            <div class="spacer"></div>
+
+            <div class="footer">
+                <button type = "Submit" class = "btn">
+                    Register
+                </button>
+                <div class = "register">
+                    <a href="login.html" style="color:blue">Already have a CourseEater account?</a>
+                </div>
             </div>
         </form>
     </div>
