Fixed login page
- Works for any size

Still required:
- Login functionality

--- a/Frontend/Login/login.html
+++ b/Frontend/Login/login.html
@@ -20,12 +20,15 @@
             </div>
 
             <!-- This is acting as a spacer -->
-            <div class="spacer"></div>
+            <div class="spacer-small"></div>
 
             <div class="footer">
                 <button type = "Submit" class = "btn">
                     Login
                 </button>
+
+                <div class="spacer"></div>
+
                 <div class = "register">
                     <a href="register.html" style="color:blue">Register for an Account</a>
                 </div>
