--- a/Frontend/Login/pwd_help.html
+++ b/Frontend/Login/pwd_help.html
@@ -10,12 +10,12 @@
 <body>
     <div class="wrapper">
         <form action="">
-            <h1>Forgot Password?</h1>
+            <h1>Verify Account</h1>
             <p>Please enter the email address associated with your account.</p>
 
             <div class="spacer-small"></div>
 
-            <div class="full-length-input">
+            <div class="input">
                 <input type="text" placeholder="Email Address" required>
             </div>
             <button type = "Submit" class = "btn">
@@ -24,9 +24,11 @@
 
             <div class="spacer-small"></div>
 
-            <p>You will receive an email with instructions to resetting your password shortly.</p>
-            <div class="register">
-                <a href="login.html" style="color:blue">Back to login page</a>
+            <div class="footer">
+                <p>You will receive an email with instructions to resetting your password shortly.</p>
+                <div class="register">
+                    <a href="login.html" style="color:blue">Back to login page</a>
+                </div>
             </div>
         </form>
     </div>
