--- a/Frontend/Login/register.html
+++ b/Frontend/Login/register.html
@@ -12,23 +12,26 @@
         <form action="">
 
             <h1>Create an Account</h1>
-            <div class="full-length-input">
+            <div class="input">
                 <input type="text" placeholder="Enter your email" required>
             </div>
-            <div class="full-length-input">
+            <div class="input">
                 <input type="password" placeholder="Create a password" required>
             </div>
-            <div class="full-length-input">
+            <div class="input">
                 <input type="password" placeholder="Confirm your password" required>
             </div>
 
             <!-- Treating this as a spacer -->
-            <div class="spacer"></div>
+            <div class="spacer-small"></div>
 
             <div class="footer">
                 <button type = "Submit" class = "btn">
                     Register
                 </button>
+
+                <div class="spacer"></div>
+
                 <div class = "register">
                     <a href="login.html" style="color:blue">Already have a CourseEater account?</a>
                 </div>
