--- a/Frontend/Login/register.html
+++ b/Frontend/Login/register.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <div class="wrapper">
-        <form action="">
+        <form action="register.php" method="post">
 
             <h1>Create an Account</h1>
             <div class="input">
-                <input type="text" placeholder="Enter your email" required>
+                <input type="text" placeholder="Enter your email" id="email" name="email" required>
             </div>
             <div class="input">
-                <input type="password" placeholder="Create a password" required>
+                <input type="password" placeholder="Create a password" id="password" name="password" required>
             </div>
             <div class="input">
-                <input type="password" placeholder="Confirm your password" required>
+                <input type="password" placeholder="Confirm your password" id="password_confirm" name="password_confirm" required>
             </div>
 
             <!-- Treating this as a spacer -->
