--- a/Frontend/Login/login.html
+++ b/Frontend/Login/login.html
@@ -74,7 +74,7 @@ function onSignIn(googleUser) {
                 <div class="spacer-small"></div>
 
                 <div class="register">
-                    <a href="register.html" style="color:blue">Register for an Account</a>
+                    <a href="Registration/register.html" style="color:blue">Register for an Account</a>
                 </div>
                 <!-- <div class="forgot-password">
                     <a href="pwd_help.html" style="color:blue">Forgot Password?</a>
